kubernetes/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: media
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: sonarr
      port:
        number: 8989
  tls:
    - hosts:
        # Becomes the tailnet machine name: https://sonarr.<tailnet>.ts.net
        - sonarr
